Added README and description in Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,13 @@ name = "cobs"
 version = "0.1.0"
 authors = ["Allen Welkie <>"]
 license = "MIT"
+description = """
+    This is an implementation of the Consistent Overhead Byte Stuffing (COBS) algorithm.
+    COBS is an algorithm for transforming a message into an encoding where a specific value
+    (the "sentinel" value) is not used. This value can then be used to mark frame boundaries
+    in a serial communication channel. """
+repository = "www.github.com/awelkie/cobs.rs"
+keywords = ["consistent", "overhead", "byte", "stuffing"]
 
 [dev-dependencies]
 quickcheck = "*"
