New default feature "use_std", no_std without it.
This follows the pattern used by the futures crate.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,9 @@ description = """
 repository = "https://github.com/awelkie/cobs.rs"
 keywords = ["consistent", "overhead", "byte", "stuffing"]
 
+[features]
+default = ["use_std"]
+use_std = []
+
 [dev-dependencies]
 quickcheck = "*"
