--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "postcard-cobs"
+name = "cobs"
 version = "0.2.0"
 authors = ["Allen Welkie <>", "James Munns <james.munns@ferrous-systems.com>"]
 license = "MIT OR Apache-2.0"
@@ -8,7 +8,7 @@ description = """
     COBS is an algorithm for transforming a message into an encoding where a specific value
     (the "sentinel" value) is not used. This value can then be used to mark frame boundaries
     in a serial communication channel. """
-repository = "https://github.com/ferrous-systems/cobs.rs"
+repository = "https://github.com/jamesmunns/cobs.rs"
 keywords = ["consistent", "overhead", "byte", "stuffing"]
 edition = "2018"
 
