--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,4 @@ script:
 
 # Check for no_std compatibility by building for an embedded target
 - cargo build --no-default-features --target=thumbv7em-none-eabihf
+- cargo build --no-default-features --features=alloc --target=thumbv7em-none-eabihf
