--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,11 @@ keywords = ["consistent", "overhead", "byte", "stuffing"]
 edition = "2021"
 
 [features]
-default = ["use_std"]
-use_std = ["alloc", "thiserror/std"]
+default = ["std"]
+std = ["alloc", "thiserror/std"]
 alloc = []
+# Legacy feature for backwards compatibility
+use_std = ["std"]
 
 [dependencies]
 thiserror = { version = "2", default-features = false }
