--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ use_std = ["std"]
 [dependencies]
 thiserror = { version = "2", default-features = false }
 defmt = { version = "0.3", optional = true }
+serde = { version = "1", features = ["derive"], optional = true }
 
 [dev-dependencies]
 quickcheck = "1"
