--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
 name = "cobs"
 version = "0.4.0"
-authors = ["Allen Welkie <>", "James Munns <james@onevariable.com>"]
+authors = [
+  "Allen Welkie <>",
+  "James Munns <james@onevariable.com>",
+  "Robin Mueller <robin.mueller.m@gmail.com>"
+]
 license = "MIT OR Apache-2.0"
 description = """
     This is an implementation of the Consistent Overhead Byte Stuffing (COBS) algorithm.
