--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,12 @@ heapless = "0.9"
 
 [dev-dependencies]
 quickcheck = "1"
+criterion = { version = "0.8" }
+rand = "0.9"
+
+[[bench]]
+name = "main"
+harness = false
 
 [package.metadata.docs.rs]
 all-features = true
